--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="background_turqoise">#b3dfd0</color>
+    <color name="background_pressed">#55b3dfd0</color>
+    <color name="text_winered">#ad2447</color>
+    <color name="text_link">#7070ff</color>
+    <color name="text_orange">#FF8000</color>
+    <color name="black">#000000</color>
+    <color name="gray">#666666</color>
+
 </resources>
