--- a/app/src/main/res/layout/fragment_write_entry.xml
+++ b/app/src/main/res/layout/fragment_write_entry.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/write_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
