--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,9 @@
             android:icon="@android:drawable/ic_menu_edit"
             android:title="Skriv inlägg" />
         <item
+            android:id="@+id/nav_members"
+            android:title="Medlemmar" />
+        <item
             android:id="@+id/nav_slideshow"
             android:icon="@android:drawable/ic_menu_slideshow"
             android:title="Tittarbilder" />
