--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_height">80dp</dimen>
     <dimen name="toolbar_height">80dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
