--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,8 @@
             android:title="Skriv inlägg" />
         <item
             android:id="@+id/nav_members"
+            android:icon="@android:drawable/ic_menu_my_calendar"
+
             android:title="Medlemmar" />
         <item
             android:id="@+id/nav_slideshow"
