--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@android:drawable/ic_menu_edit"
             android:title="Skriv inlägg" />
         <item
+            android:id="@+id/nav_arr"
+            android:icon="@android:drawable/ic_menu_today"
+            android:title="Arrsidan" />
+        <item
             android:id="@+id/nav_members"
             android:icon="@android:drawable/ic_menu_my_calendar"
 
