--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -11,7 +11,7 @@
     android:background="@drawable/background">
 
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/entry"
         android:paddingTop="2dip"
         android:layout_width="fill_parent"
