--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,14 +17,13 @@
         <item
             android:id="@+id/nav_members"
             android:icon="@android:drawable/ic_menu_my_calendar"
-
             android:title="Medlemmar" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_tattarbilder"
             android:icon="@android:drawable/ic_menu_slideshow"
             android:title="Tittarbilder" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_settings"
             android:icon="@android:drawable/ic_menu_manage"
             android:title="Inställningar" />
         <item
