--- a/app/src/main/res/layout/fragment_arr.xml
+++ b/app/src/main/res/layout/fragment_arr.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/background_turqoise">
+    android:background="@color/background">
 
     <Button
         android:id="@+id/add_arr"
