--- a/app/src/main/res/layout/fragment_member_list.xml
+++ b/app/src/main/res/layout/fragment_member_list.xml
@@ -7,5 +7,5 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_turqoise"
+    android:background="@color/background"
     tools:listitem="@layout/adapter_member_item" />
