--- a/app/src/main/res/layout/fragment_version_update.xml
+++ b/app/src/main/res/layout/fragment_version_update.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/background_turqoise"
+    android:background="@color/background"
     android:weightSum="1">
     <!--    xmlns:tools="http://schemas.android.com/tools"
         tools:context="cl.sidan.appen.VersionUpdateActivity" -->
