--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,15 +18,21 @@
             android:id="@+id/nav_members"
             android:icon="@android:drawable/ic_menu_my_calendar"
             android:title="Medlemmar" />
+<!--
         <item
             android:id="@+id/nav_tattarbilder"
             android:icon="@android:drawable/ic_menu_slideshow"
             android:title="Tittarbilder" />
+-->
         <item
             android:id="@+id/nav_settings"
             android:icon="@android:drawable/ic_menu_manage"
             android:title="Inställningar" />
         <item
+            android:id="@+id/nav_stats"
+            android:icon="@android:drawable/ic_menu_info_details"
+            android:title="Stats" />
+<!--        <item
             android:id="@+id/nav_map"
             android:icon="@android:drawable/ic_menu_mapmode"
             android:title="Kart-mode" />
@@ -34,6 +40,7 @@
             android:id="@+id/nav_ninja"
             android:icon="@android:drawable/ic_menu_help"
             android:title="Ninja-mode" />
+-->
 
 
     </group>
