--- a/app/src/main/res/layout/adapter_kumpaner_item.xml
+++ b/app/src/main/res/layout/adapter_kumpaner_item.xml
@@ -2,13 +2,14 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:layout_gravity="start"
-    android:textStyle="bold"
     android:gravity="center"
-    android:button="@android:color/transparent"
+    android:background="@drawable/background"
+    android:textStyle="bold"
     android:textColor="@color/text_winered">
 
     <TextView
