--- a/app/src/main/res/layout/fragment_member_list.xml
+++ b/app/src/main/res/layout/fragment_member_list.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/memberList"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:listSelector="@drawable/list_selector_ignored"
+    android:scrollingCache="false"
     tools:listitem="@layout/adapter_member_item" />
