--- a/app/src/main/res/layout/popup_kumpaner.xml
+++ b/app/src/main/res/layout/popup_kumpaner.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/kumpaner_layout_root"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -34,9 +35,11 @@
         android:columnWidth="50sp"
         android:numColumns="auto_fit"
         android:layout_weight="1"
-        android:gravity="center">
-
-    </GridView>
+        android:gravity="center"
+        android:background="@color/background"
+        android:scrollingCache="false"
+        android:listSelector="@drawable/list_selector_ignored"
+        tools:listitem="@layout/adapter_kumpaner_item" />
 
     <LinearLayout
         android:layout_width="match_parent"
