Poor mans mapview
Add "view position" for each entry. Just opens googlemaps at that
position.

--- a/app/src/main/res/menu/menu_entry.xml
+++ b/app/src/main/res/menu/menu_entry.xml
@@ -5,6 +5,9 @@
     <item android:id="@+id/reply_entry"
         android:title="@string/svara_med_inlagg" />
 
+    <item android:id="@+id/view_position"
+        android:title="Öppna position" />
+
     <item android:id="@+id/reply_entry_via"
         android:title="@string/svara_privat">
 
