--- a/app/src/main/res/layout/activity_version_update.xml
+++ b/app/src/main/res/layout/activity_version_update.xml
@@ -38,6 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="60dp"
         android:orientation="horizontal">
 
         <Button
