--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -31,20 +31,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
+            <Spinner
+                android:id="@+id/change_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Spinner
-
-                    android:id="@+id/change_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_username">
-                </Spinner>
-
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_username">
+            </Spinner>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -78,7 +70,8 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:visibility="gone" />
 
             </android.support.design.widget.TextInputLayout>
 
