--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -15,8 +15,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">YOUR_KEY_HERE</string>
-    <string name="google_app_id">
-        GET_APP_ID
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
     </string>
 </resources>
