--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,9 +26,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nummerView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="loser@chalmerslosers.com" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
